scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/opensearch/bedrock-egress-ibm-opensearch-operand.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-ibm-opensearch-operand
  namespace: "opensearchNamespace"
  labels:
    component: cpfs3
    service: opensearch
spec:
  podSelector: 
    matchLabels:
      app.kubernetes.io/managed-by: ibm-elasticsearch
  egress:
    - ports:
      - protocol: TCP
        port: 443
      to:
        - podSelector:
            matchLabels:
              apiserver: 'true'
          namespaceSelector: {}
    - ports:
      - protocol: TCP
        port: 443
      - protocol: TCP
        port: 19300
      - protocol: TCP
        port: 8081
      - protocol: TCP
        port: 9300
      - protocol: TCP
        port: 9200
      to:
        - podSelector: {}
  policyTypes:
    - Egress
